--- a/SendEmailandSMSConsole/SendEmailandSMSConsole.csproj
+++ b/SendEmailandSMSConsole/SendEmailandSMSConsole.csproj
@@ -9,4 +9,10 @@
     <PackageReference Include="NETCore.MailKit" Version="2.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="email-template\index.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
